// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountertopTopology #unit generateSourceStreams Should generate streams for any source stations 1`] = `
Array [
  Object {
    "mouth": 0,
    "source": 0,
    "tributaryMap": Map {},
  },
]
`;

exports[`CountertopTopology #unit generateStreams Should generate the correct streams 1`] = `
Array [
  Object {
    "mouth": 0,
    "source": 0,
    "tributaryMap": Map {},
  },
  Object {
    "mouth": 1,
    "source": 0,
    "tributaryMap": Map {
      "foo" => Object {
        "mouth": 0,
        "source": 0,
        "tributaryMap": Map {},
      },
    },
  },
]
`;

exports[`CountertopTopology #unit generateStreams Should not generate streams for stations with no inputs 1`] = `
Array [
  Object {
    "mouth": 0,
    "source": 0,
    "tributaryMap": Map {},
  },
]
`;
